--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.9",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "expo": "^47.0.13",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "react-native-asset": "^2.0.1",
     "typescript": "^4.6.3"
   },
   "private": true
