--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
+    "react-navigation-helpers": "^2.2.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
